fix: wrap urls in summary report (#3423)
* wrap urls in summary report

* put header and column content type in one object

--- a/src/reports/components/report-sections/summary-results-table.scss
+++ b/src/reports/components/report-sections/summary-results-table.scss
@@ -29,6 +29,13 @@
 
     td {
         background-color: $neutral-0;
-        overflow-wrap: break-word;
+
+        &.text-cell {
+            overflow-wrap: break-word;
+        }
+
+        &.url-cell {
+            overflow-wrap: anywhere;
+        }
     }
 }
